bdr.BDR.scala.error
Erreur de compilation :
BDR:36: error: Unmatched closing brace '}' ignored here
	}
        ^